--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar"> 
         <a href="#" class="navbar-logo">CR7</a>
         <div class="navbar-menu">
-            <a href="#">Biography</a>
+            <a href="bio.html">Biography</a>
             <a href="#">Journey</a>
             <a href="#">Video</a>
             <a href="#">Contact</a>
