--- a/index.html
+++ b/index.html
@@ -100,9 +100,27 @@
                     Whaddup A'..?! juga telah meraih triple platinum untuk angka penjualan album yang mencapai lebih dari 450.000 keping. 
                     Pada tanggal 23 Juni 2007, Agnes menggelar konser tunggal untuk pertama kali di Stadium Negara, Kuala Lumpur, Malaysia, yang disaksikan sebanyak 3.000 penonton.
                     Agnes juga menjadi bintang tamu khusus dalam panggung final Asian Idol yang digelar pada tanggal 16 Desember 2007, dengan membawakan lagunya berjudul "Get Up".
-
                 </p>
-    
+            </div>
+        </div>
+
+        <div class="karir4">
+            <div>
+             <p class="content4">
+                Pada tanggal 4 Oktober 2008, Agnes dipilih untuk mewakili Indonesia di Asia Song Festival yang diselenggarakan oleh
+                Korea Foundation for International Culture Exchange di Seoul, Korea Selatan. 
+                Acara yang diikuti 24 artis dari 12 negara Asia di antaranya Super Junior, Girls' Generation, 2NE1, Rain, SHINee, dan Ruslana.  
+                Event tersebut disaksikan oleh 35.000 penonton di Seoul World Cup Stadium dan disiarkan di stasiun televisi di 30 negara termasuk Amerika Serikat,
+                 Kanada, Inggris Raya, Jerman, Prancis, Italia, Australia dan Jepang. <br>
+                Pada tanggal 1 April 2009 Agnes akhirnya resmi meluncurkan album ketiganya yang diberi judul Sacredly Agnezious.
+                Kali ini, Agnes lebih terlibat secara langsung dalam pengerjaan album. <br>
+                Dengan dibantu sejumlah musikus ternama, yaitu Erwin Gutawa, Dewiq, Pay, dan DJ Sumantri, Agnes turut terlibat sebagai produser dan pencipta lagu dalam album tersebut. <br>
+                Pada Anugerah Musik Indonesia yang digelar pada tahun berikutnya, Agnes berhasil meraih dua penghargaan, masing-masing untuk kategori "Album Pop Terbaik", "Artis Solo Pop Wanita Terbaik" dan "Album Terbaik Terbaik".
+
+             </p>
+            </div>
+            <div class="image2">
+             <img height="300px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Agnez_Mo_2019_by_Glenn_Francis.jpg/800px-Agnez_Mo_2019_by_Glenn_Francis.jpg" alt="Agnes Mo">
             </div>
         </div>
             
